installing front env

--- a/frontend/src/app/app.template.html
+++ b/frontend/src/app/app.template.html
@@ -1,7 +1,7 @@
 <ion-split-pane>
 
   <!-- logged in menu -->
-  <ion-menu id="loggedInMenu" [content]="content" *ngIf="isLoggedIn">
+  <ion-menu id="loggedInMenu" [content]="content" *ngIf="userData.isLoggedIn">
 
     <ion-header>
       <ion-toolbar>
