--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -1,3 +1,12 @@
 page-home {
-
+	
+	#my-map {
+		left: 0;
+	    right: 0;
+	    top: 0;
+	    bottom: 0;
+	    position: absolute;
+	    height: 100%;
+	    width: 100%;
+	}
 }
